test/scc/decl/semantic-errors/080.a
080.t:6:7: error: assignment from incompatible pointer type